Simple compose example

--- a/src/compose/compose-simple.yml
+++ b/src/compose/compose-simple.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - "6081:6080"
     volumes:
-      - ${BASEDIR}/shared/ROS/workspaces/:/workspaces/
+      - ../../shared/ROS/workspaces/:/workspaces/
     command: bash -c "roscore & /start_novnc.sh"
     restart: always
